--- a/roles/traefik/templates/traefik.toml
+++ b/roles/traefik/templates/traefik.toml
@@ -44,3 +44,5 @@
 
       [certificatesResolvers.letsencrypt.acme.dnsChallenge]
         provider = "{{ traefik_dns_provider }}"
+        resolvers = "1.1.1.1:53,8.8.8.8:53"
+        delayBeforeCheck = 30
