--- a/nas.yml
+++ b/nas.yml
@@ -6,7 +6,6 @@
       tags: users
 
   roles:
-
     ###
     ### Requirements
     ###
@@ -15,16 +14,15 @@
         - samba
         - skip_ansible_lint
 
-    - role: geerlingguy.nfs
-      tags:
-        - nfs
-        - skip_ansible_lint
+    # - role: geerlingguy.nfs
+    #   tags:
+    #     - nfs
+    #     - skip_ansible_lint
 
     - role: geerlingguy.docker
       tags:
         - docker
         - skip_ansible_lint
-
 
     ###
     ### Ansible-NAS Roles
@@ -38,7 +36,6 @@
       tags:
         - ansible-nas-docker
         - ansible-nas
-
 
     ###
     ### Applications
