--- a/tasks/jellyfin.yml
+++ b/tasks/jellyfin.yml
@@ -9,7 +9,7 @@
 - name: Jellyfin Docker Container
   docker_container:
     name: jellyfin
-    image: linuxserver/jellyfin
+    image: "{{ jellyfin_docker_image }}"
     pull: true
     volumes:
       - "{{ jellyfin_config_directory }}:/config:rw"
