add docker image

--- a/roles/cloudflare_ddns/defaults/main.yml
+++ b/roles/cloudflare_ddns/defaults/main.yml
@@ -4,6 +4,8 @@ cloudflare_ddns_enabled: false
 # Data directory for config file
 cloudflare_data_directory: "{{ docker_home }}/cloudflare_ddns"
 
+cloudflare_ddns_docker_image: joshava/cloudflare-ddns:latest
+
 # Your domain name
 cloudflare_zone: "{{ ansible_nas_domain }}"
 
@@ -17,7 +19,7 @@ cloudflare_token: "abcdabcdabcd123412341234"
 # Set to true to make traffic go through the CloudFlare CDN.
 # Note that if the cloudflare host is a wildcard (the default), this must be false, as cloudflare
 # does not support http proxy of wildcard CNAMEs.
-cloudflare_proxy: false
+# cloudflare_proxy: false
 
 # Set to AAAA to use set IPv6 records instead of IPv4 records.
 cloudflare_type: "A"
