--- a/roles/cloudflare_ddns/tasks/main.yml
+++ b/roles/cloudflare_ddns/tasks/main.yml
@@ -15,11 +15,10 @@
     dest: "{{ cloudflare_data_directory }}/config.yml"
   register: template_files_result
 
-
 - name: Cloudflare Dynamic DNS Container
   docker_container:
     name: cloudflare-ddns
-    image: joshava/cloudflare-ddns:latest
+    image: "{{ cloudflare_ddns_docker_image }}"
     pull: true
     volumes:
       - "{{ cloudflare_data_directory }}/config.yml:/app/config.yaml"
