add qbittorrent & ee

--- a/nas.yml
+++ b/nas.yml
@@ -290,6 +290,16 @@
         - piwigo
       when: (piwigo_enabled | default(False))
 
+    - role: qbittorrent
+      tags:
+        - qbittorrent
+      when: (qbittorrent_enabled | default(False))
+
+    - role: qbittorrentee
+      tags:
+        - qbittorrentee
+      when: (qbittorrentee_enabled | default(False))
+
   tasks:
     - import_tasks: tasks/thelounge.yml
       when: (thelounge_enabled | default(False))
