--- a/roles/bitwarden/defaults/main.yml
+++ b/roles/bitwarden/defaults/main.yml
@@ -2,6 +2,8 @@
 bitwarden_enabled: false
 bitwarden_available_externally: "false"
 bitwarden_data_directory: "{{ docker_home }}/bitwarden"
+
+bitwarden_version: 1.24.0
 bitwarden_port_a: "19080"
 bitwarden_port_b: "3012"
 bitwarden_hostname: "bitwarden"
