--- a/roles/cloudflare_ddns/tasks/main.yml
+++ b/roles/cloudflare_ddns/tasks/main.yml
@@ -15,7 +15,6 @@
     dest: "{{ cloudflare_data_directory }}/config.yml"
   register: template_files_result
 
-
 - name: Cloudflare Dynamic DNS Container
   docker_container:
     name: cloudflare-ddns
@@ -24,5 +23,5 @@
     volumes:
       - "{{ cloudflare_data_directory }}/config.yml:/app/config.yaml"
     restart_policy: unless-stopped
-    memory: "{{ cloudflare_memory }}"
+    # memory: "{{ cloudflare_memory }}"
     recreate: "{{ template_files_result is changed }}"
